--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <groupId>com.laiye.framework</groupId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.4.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <artifactId>laiye-grpc2json-gateway-starter</artifactId>
@@ -16,7 +16,7 @@
         <kotlin.version>1.6.0</kotlin.version>
         <common.io.version>2.11.0</common.io.version>
         <grpc.version>1.54.0</grpc.version>
-        <springboot.version>3.1.1</springboot.version>
+        <springboot.version>3.1.2</springboot.version>
     </properties>
 
     <dependencies>
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>6.1.1</version>
+            <version>6.1.2</version>
         </dependency>
 
         <dependency>
@@ -141,6 +141,20 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <name>maven-snapshots</name>
+            <url>https://nexus.wul.ai/repository/maven-snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>maven-releases</id>
+            <name>maven-releases</name>
+            <uniqueVersion>true</uniqueVersion>
+            <url>https://nexus.wul.ai/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
